--- a/project.config
+++ b/project.config
@@ -1,4 +1,5 @@
 [project]
-	state = active
 [access]
 	inheritFrom = CyanogenMod/android_device_generic_goldfish
+[submit]
+	action = rebase if necessary
